# assegnamento-nov-dic-2022-alberto-piccina

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
data/: goals_coordinates_satellite_1.txt  goals_coordinates_satellite_2.txt  obstacle_positions.txt  obstacles_coordinates.txt  start_robots_coordinates.txt
libs/: CMakeLists.txt
libs/Map/: CMakeLists.txt
libs/Map/include/: Map.h
libs/Map/src/: Map.cpp
libs/Robot/: CMakeLists.txt
libs/Robot/include/: Robot.h
libs/Robot/src/: Robot.cpp
libs/Satellite/: CMakeLists.txt
libs/Satellite/include/: Satellite.h
libs/Satellite/src/: Satellite.cpp
libs/Server/: CMakeLists.txt
libs/Server/include/: Server.h
libs/Server/src/: Server.cpp
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/rover/lib/rover/: rover
ros_ws/install/rover/share/ament_index/resource_index/package_run_dependencies/: rover
ros_ws/install/rover/share/ament_index/resource_index/parent_prefix_path/: rover
ros_ws/install/rover/share/rover/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
ros_ws/install/rover/share/rover/cmake/: roverConfig-version.cmake  roverConfig.cmake
ros_ws/install/rover/share/rover/environment/: ament_prefix_path.dsv  path.dsv
ros_ws/install/rover_visualizer/include/rover_visualizer/rover_visualizer/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  rover_position.h  rover_position.hpp
ros_ws/install/rover_visualizer/include/rover_visualizer/rover_visualizer/msg/detail/: rover_position__builder.hpp  rover_position__functions.h  rover_position__rosidl_typesupport_fastrtps_c.h  rover_position__rosidl_typesupport_fastrtps_cpp.hpp  rover_position__rosidl_typesupport_introspection_c.h  rover_position__rosidl_typesupport_introspection_cpp.hpp  rover_position__struct.h  rover_position__struct.hpp  rover_position__traits.hpp  rover_position__type_support.h
ros_ws/install/rover_visualizer/lib/rover_visualizer/: rover_visualizer
ros_ws/install/rover_visualizer/local/lib/python3.10/dist-packages/rover_visualizer/: __init__.py  _rover_visualizer_s.ep.rosidl_typesupport_c.c  _rover_visualizer_s.ep.rosidl_typesupport_fastrtps_c.c  _rover_visualizer_s.ep.rosidl_typesupport_introspection_c.c
ros_ws/install/rover_visualizer/local/lib/python3.10/dist-packages/rover_visualizer-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
ros_ws/install/rover_visualizer/local/lib/python3.10/dist-packages/rover_visualizer/msg/: __init__.py  _rover_position.py  _rover_position_s.c
ros_ws/install/rover_visualizer/share/ament_index/resource_index/package_run_dependencies/: rover_visualizer
ros_ws/install/rover_visualizer/share/ament_index/resource_index/parent_prefix_path/: rover_visualizer
ros_ws/install/rover_visualizer/share/ament_index/resource_index/rosidl_interfaces/: rover_visualizer
ros_ws/install/rover_visualizer/share/rover_visualizer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/rover_visualizer/share/rover_visualizer/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rover_visualizer__rosidl_generator_cppExport.cmake  export_rover_visualizer__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  rover_visualizerConfig-version.cmake  rover_visualizerConfig.cmake  rover_visualizer__rosidl_typesupport_cExport.cmake  rover_visualizer__rosidl_typesupport_cppExport-noconfig.cmake  rover_visualizer__rosidl_typesupport_cppExport.cmake  rover_visualizer__rosidl_typesupport_introspection_cExport-noconfig.cmake  rover_visualizer__rosidl_typesupport_introspection_cExport.cmake  rover_visualizer__rosidl_typesupport_introspection_cppExport-noconfig.cmake
ros_ws/install/rover_visualizer/share/rover_visualizer/config/: mars.rviz
ros_ws/install/rover_visualizer/share/rover_visualizer/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ros_ws/install/rover_visualizer/share/rover_visualizer/launch/: rover_launch.py  rover_visualizer_launch.py  rviz_launch.py
ros_ws/install/rover_visualizer/share/rover_visualizer/msg/: RoverPosition.idl  RoverPosition.msg
ros_ws/log/: latest_build
ros_ws/src/rover/: CMakeLists.txt  README.md  package.xml
ros_ws/src/rover/include/Map/: Map.h
ros_ws/src/rover/include/Robot/: Robot.h
ros_ws/src/rover/include/Server/: Server.h
ros_ws/src/rover/include/rover/: publisher.h
ros_ws/src/rover/src/: Map.cpp  Robot.cpp  Server.cpp  main.cpp  publisher.cpp
ros_ws/src/rover_visualizer/: CMakeLists.txt  README.md
ros_ws/src/rover_visualizer/config/: mars.rviz
ros_ws/src/rover_visualizer/include/rover_visualizer/: Visualizer.h
ros_ws/src/rover_visualizer/launch/: rover_launch.py  rover_visualizer_launch.py  rviz_launch.py
ros_ws/src/rover_visualizer/src/: Visualizer.cpp  main.cpp
test/: CMakeLists.txt
test/test_map/: CMakeLists.txt  test_map.cpp
test/test_robot/: CMakeLists.txt  test_robot.cpp
test/test_robot_and_map/: CMakeLists.txt  test_robot_and_map.cpp
